# ImageAlchemy

./: .gitignore  LICENSE  README.md  README_example.md  environment.yml  pyproject.toml
.github/workflows/: python-package.yml
examples/: 1_basic_enhancement_tasks.ipynb  2_advanced_object_manipulation.ipynb
src/image_alchemy/: alchemy.py
src/image_alchemy/core/: __init__.py  model_loader.py  pipelines.py
src/image_alchemy/functionalities/: enhancement.py  generative.py  manipulation.py
src/image_alchemy/utils/: image_utils.py  visualization.py
